Java 8 reverse compatibility